--- a/index.html
+++ b/index.html
@@ -44,24 +44,32 @@
         <h2 class="text-xl font-semibold text-gray-800">Skills</h2>
 
         <!-- FRONTEND section -->
-        <section>
+        <section >
           <h3>Frontend</h3>
           <ul class="grid grid-cols-3">
             <li class="flex flex-col items-center justify-center">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" class="w-10 h-10">
-                <path
-                  d="M0 32l34.9 395.8L191.5 480l157.6-52.2L384 32H0zm308.2 127.9H124.4l4.1 49.4h175.6l-13.6 148.4-97.9 27v.3h-1.1l-98.7-27.3-6-75.8h47.7L138 320l53.5 14.5 53.7-14.5 6-62.2H84.3L71.5 112.2h241.1l-4.4 47.7z" />
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-10 h-10">
+                <path fill="#E34F26" d="M71,460 L30,0 481,0 440,460 255,512" />
+                <path fill="#EF652A" d="M256,472 L405,431 440,37 256,37" />
+                <path fill="#EBEBEB"
+                  d="M256,208 L181,208 176,150 256,150 256,94 255,94 114,94 115,109 129,265 256,265zM256,355 L255,355 192,338 188,293 158,293 132,293 139,382 255,414 256,414z" />
+                <path fill="#FFF"
+                  d="M255,208 L255,265 325,265 318,338 255,355 255,414 371,382 372,372 385,223 387,208 371,208zM255,94 L255,129 255,150 255,150 392,150 392,150 392,150 393,138 396,109 397,94z" />
               </svg>
               <span class="text-xs">HTML</span>
             </li>
-             <li class="flex flex-col items-center justify-center">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" class="w-10 h-10">
-                <path
-                  d="M0 32l34.9 395.8L192 480l157.1-52.2L384 32H0zm313.1 80l-4.8 47.3L193 208.6l-.3.1h111.5l-12.8 146.6-98.2 28.7-98.8-29.2-6.4-73.9h48.9l3.2 38.3 52.6 13.3 54.7-15.4 3.7-61.6-166.3-.5v-.1l-.2.1-3.6-46.3L193.1 162l6.5-2.7H76.7L70.9 112h242.2z" />
+            <li class="flex flex-col items-center justify-center">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-10 h-10">
+                <path fill="#264de4" d="M71.357 460.819L30.272 0h451.456l-41.129 460.746L255.724 512z"/>
+                <path fill="#2965f1" d="M405.388 431.408l35.148-393.73H256v435.146z"/>
+                <path fill="#ebebeb" d="M124.46 208.59l5.065 56.517H256V208.59zM119.419 150.715H256V94.197H114.281zM256 355.372l-.248.066-62.944-16.996-4.023-45.076h-56.736l7.919 88.741 115.772 32.14.26-.073z"/>
+                <path fill="#fff" d="M255.805 208.59v56.517H325.4l-6.56 73.299-63.035 17.013v58.8l115.864-32.112.85-9.549 13.28-148.792 1.38-15.176 10.203-114.393H255.805v56.518h79.639L330.3 208.59z"/>
               </svg>
+              
+
               <span class="text-xs">CSS</span>
             </li>
-             <li class="flex flex-col items-center justify-center">
+            <li class="flex flex-col items-center justify-center">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 630 630" class="w-10 h-10">
                 <rect width="630" height="630" fill="#f7df1e" />
                 <path
@@ -69,7 +77,7 @@
               </svg>
               <span class="text-xs">JavaScript</span>
             </li>
-             <li class="flex flex-col items-center justify-center">
+            <li class="flex flex-col items-center justify-center">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="-11.5 -10.23174 23 20.46348" class="w-10 h-10">
                 <circle cx="0" cy="0" r="2.05" fill="#61dafb" />
                 <g stroke="#61dafb" stroke-width="1" fill="none">
@@ -80,7 +88,7 @@
               </svg>
               <span class="text-xs">React</span>
             </li>
-             <li class="flex flex-col items-center justify-center">
+            <li class="flex flex-col items-center justify-center">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 774 875.7" class="w-10 h-10">
                 <path fill="#FFF" d="M387 0l387 218.9v437.9L387 875.7 0 656.8V218.9z" />
                 <path fill="#8ed6fb"
@@ -90,7 +98,7 @@
               </svg>
               <span class="text-xs">Webpack</span>
             </li>
-             <li class="flex flex-col items-center justify-center">
+            <li class="flex flex-col items-center justify-center">
               <svg width="48" height="21" viewBox="0 0 48 21" fill="none" xmlns="http://www.w3.org/2000/svg"
                 class="w-10 h-10">
                 <path
@@ -99,7 +107,7 @@
               </svg>
               <span class="text-xs text-center">Styled Components</span>
             </li>
-             <li class="flex flex-col items-center justify-center">
+            <li class="flex flex-col items-center justify-center">
               <svg viewBox="0 0 1000 1000" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-10 h-10">
                 <path
                   d="M489.5 226.499C328 231.632 280 346.999 269 409.499C283.333 386.332 328.5 335.5 395 335.5C472.5 335.5 531.5 422 567.5 449C611.237 481.803 699.123 525.115 814.5 490C906.5 462 949.167 364.332 958.5 317.999C914 378.499 846.5 414.838 763 371.999C705.5 342.499 662.5 221 489.5 226.499Z"
@@ -117,14 +125,14 @@
         <section>
           <h3>Backend</h3>
           <ul class="grid grid-cols-3">
-             <li class="flex flex-col items-center justify-center">
+            <li class="flex flex-col items-center justify-center">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-10 h-10">
                 <path
                   d="M224 508c-6.7 0-13.5-1.8-19.4-5.2l-61.7-36.5c-9.2-5.2-4.7-7-1.7-8 12.3-4.3 14.8-5.2 27.9-12.7 1.4-.8 3.2-.5 4.6.4l47.4 28.1c1.7 1 4.1 1 5.7 0l184.7-106.6c1.7-1 2.8-3 2.8-5V149.3c0-2.1-1.1-4-2.9-5.1L226.8 37.7c-1.7-1-4-1-5.7 0L36.6 144.3c-1.8 1-2.9 3-2.9 5.1v213.1c0 2 1.1 4 2.9 4.9l50.6 29.2c27.5 13.7 44.3-2.4 44.3-18.7V167.5c0-3 2.4-5.3 5.4-5.3h23.4c2.9 0 5.4 2.3 5.4 5.3V378c0 36.6-20 57.6-54.7 57.6-10.7 0-19.1 0-42.5-11.6l-48.4-27.9C8.1 389.2.7 376.3.7 362.4V149.3c0-13.8 7.4-26.8 19.4-33.7L204.6 9c11.7-6.6 27.2-6.6 38.8 0l184.7 106.7c12 6.9 19.4 19.8 19.4 33.7v213.1c0 13.8-7.4 26.7-19.4 33.7L243.4 502.8c-5.9 3.4-12.6 5.2-19.4 5.2zm149.1-210.1c0-39.9-27-50.5-83.7-58-57.4-7.6-63.2-11.5-63.2-24.9 0-11.1 4.9-25.9 47.4-25.9 37.9 0 51.9 8.2 57.7 33.8.5 2.4 2.7 4.2 5.2 4.2h24c1.5 0 2.9-.6 3.9-1.7s1.5-2.6 1.4-4.1c-3.7-44.1-33-64.6-92.2-64.6-52.7 0-84.1 22.2-84.1 59.5 0 40.4 31.3 51.6 81.8 56.6 60.5 5.9 65.2 14.8 65.2 26.7 0 20.6-16.6 29.4-55.5 29.4-48.9 0-59.6-12.3-63.2-36.6-.4-2.6-2.6-4.5-5.3-4.5h-23.9c-3 0-5.3 2.4-5.3 5.3 0 31.1 16.9 68.2 97.8 68.2 58.4-.1 92-23.2 92-63.4z" />
               </svg>
               <span class="text-xs">NodeJS</span>
             </li>
-             <li class="flex flex-col items-center justify-center">
+            <li class="flex flex-col items-center justify-center">
               <svg viewBox="0 0 52 30" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-10 h-10">
                 <path
                   d="M51.7026 29.1934C50.9501 29.478 50.1195 29.4774 49.3674 29.1917C48.6154 28.9059 47.9939 28.3548 47.6203 27.6424L40.188 17.3643L39.1109 15.9274L30.4873 27.6553C30.1361 28.3379 29.5484 28.8692 28.8339 29.1499C28.1195 29.4306 27.3272 29.4415 26.6053 29.1805L37.7171 14.2729L27.3808 0.806564C28.1241 0.538734 28.9369 0.535183 29.6824 0.79651C30.4279 1.05784 31.0606 1.56808 31.474 2.24131L39.1777 12.6465L46.9244 2.2844C47.2783 1.61396 47.8662 1.09693 48.5764 0.831615C49.2866 0.566296 50.0695 0.571181 50.7763 0.845341L46.765 6.16855L41.3319 13.241C41.181 13.3756 41.0603 13.5406 40.9776 13.7251C40.895 13.9096 40.8522 14.1095 40.8522 14.3117C40.8522 14.5139 40.895 14.7138 40.9776 14.8983C41.0603 15.0828 41.181 15.2478 41.3319 15.3824L51.6811 29.1956L51.7026 29.1934ZM0.00433439 14.0877L0.90913 9.61755C3.39516 0.77856 13.5289 -2.89879 20.5001 2.57307C24.5824 5.78078 25.6014 10.322 25.4011 15.4405H2.4042C2.03151 24.5811 8.62789 30.1004 17.0619 27.2804C18.4291 26.7883 19.6529 25.9647 20.6237 24.8834C21.5944 23.8021 22.2818 22.4969 22.6242 21.0847C23.0701 19.65 23.8048 19.4044 25.1533 19.818C24.9286 21.5681 24.3099 23.2445 23.3439 24.721C22.3778 26.1975 21.0895 27.4357 19.5759 28.3425C17.0757 29.7101 14.2071 30.2521 11.3802 29.8911C8.5534 29.5301 5.91307 28.2846 3.83679 26.3326C1.78383 24.0219 0.543067 21.103 0.303778 18.0214C0.303778 17.5151 0.131437 17.0412 0.0151058 16.5866C0.00461882 15.7544 -0.000407927 14.9221 2.58433e-05 14.0898L0.00433439 14.0877ZM2.4322 13.4715H23.2296C23.1003 6.845 18.9189 2.14437 13.3414 2.10128C7.13283 2.01511 2.69071 6.61233 2.41712 13.4414L2.4322 13.4715Z"
@@ -132,7 +140,7 @@
               </svg>
               <span class="text-xs">Express</span>
             </li>
-             <li class="flex flex-col items-center justify-center">
+            <li class="flex flex-col items-center justify-center">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 67" fill="#fff" fill-rule="evenodd" stroke="#000"
                 stroke-linecap="round" stroke-linejoin="round" class="w-10 h-10">
                 <g stroke="none" fill-rule="nonzero">
@@ -149,7 +157,7 @@
               </svg>
               <span class="text-xs">MongoDB</span>
             </li>
-             <li class="flex flex-col items-center justify-center">
+            <li class="flex flex-col items-center justify-center">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192 192" class="w-10 h-10">
                 <defs>
                   <linearGradient id="d" x1="-108.63" y1="-692.24" x2="-58.56" y2="-742.31"
@@ -194,7 +202,7 @@
               </svg>
               <span class="text-xs">Firebase</span>
             </li>
-             <li class="flex flex-col items-center justify-center">
+            <li class="flex flex-col items-center justify-center">
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                 viewBox="0 0 40 40" class="w-10 h-10">
                 <rect x="10" y="0" width="20" height="40" rx="10" ry="5" />
@@ -214,7 +222,7 @@
         <section>
           <h3>Miscellaneous</h3>
           <ul class="grid grid-cols-3">
-             <li class="flex flex-col items-center justify-center">
+            <li class="flex flex-col items-center justify-center">
               <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 97 97"
                 enable-background="new 0 0 97 97" xml:space="preserve" class="w-10 h-10">
@@ -230,7 +238,7 @@
               </svg>
               <span class="text-xs">Git</span>
             </li>
-             <li class="flex flex-col items-center justify-center">
+            <li class="flex flex-col items-center justify-center">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 66" fill="#fff" fill-rule="evenodd" stroke="#000"
                 stroke-linecap="round" stroke-linejoin="round" class="w-10 h-10">
                 <path
@@ -239,7 +247,7 @@
               </svg>
               <span class="text-xs">Jest</span>
             </li>
-             <li class="flex flex-col items-center justify-center">
+            <li class="flex flex-col items-center justify-center">
               <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
                 style="enable-background:new 0 0 512 512;" xml:space="preserve" class="w-10 h-10">
