--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>Personal Portfolio</title>
 </head>
 
-<body>
+<body class="">
   <!--#include file="./src/pages/projects.html" -->
-  <div class="flex items-center flex-col mx-12">
+  <div class="flex items-center flex-col">
 
     <header>
       <h1 id="intro" class="text-2xl font-semibold text-gray-800">Daniel Moderiano</h1>
@@ -40,13 +40,13 @@
       </section>
 
       <!-- SKILLS/TECH STACK section -->
-      <section id="skills">
-        <h2 class="text-xl font-semibold text-gray-800">Skills</h2>
+      <section id="skills" class="">
+        <h2 class="text-xl font-semibold text-gray-800">Technologies</h2>
 
         <!-- FRONTEND section -->
-        <section>
-          <h3>Frontend</h3>
-          <ul class="grid grid-cols-3">
+        <section class="border p-4 m-4 text-center bg-white rounded">
+          <h3 class="text-lg font-semibold mb-4">Frontend</h3>
+          <ul class="grid grid-cols-3 gap-2 gap-y-4">
             <li class="flex flex-col items-center justify-center">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-10 h-10">
                 <path fill="#E34F26" d="M71,460 L30,0 481,0 440,460 255,512" />
@@ -56,7 +56,7 @@
                 <path fill="#FFF"
                   d="M255,208 L255,265 325,265 318,338 255,355 255,414 371,382 372,372 385,223 387,208 371,208zM255,94 L255,129 255,150 255,150 392,150 392,150 392,150 393,138 396,109 397,94z" />
               </svg>
-              <span class="text-xs">HTML</span>
+              <span class="text-sm mt-1">HTML</span>
             </li>
             <li class="flex flex-col items-center justify-center">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-10 h-10">
@@ -69,7 +69,7 @@
               </svg>
 
 
-              <span class="text-xs">CSS</span>
+              <span class="text-sm mt-1">CSS</span>
             </li>
             <li class="flex flex-col items-center justify-center">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 630 630" class="w-10 h-10">
@@ -77,7 +77,7 @@
                 <path
                   d="m423.2 492.19c12.69 20.72 29.2 35.95 58.4 35.95 24.53 0 40.2-12.26 40.2-29.2 0-20.3-16.1-27.49-43.1-39.3l-14.8-6.35c-42.72-18.2-71.1-41-71.1-89.2 0-44.4 33.83-78.2 86.7-78.2 37.64 0 64.7 13.1 84.2 47.4l-46.1 29.6c-10.15-18.2-21.1-25.37-38.1-25.37-17.34 0-28.33 11-28.33 25.37 0 17.76 11 24.95 36.4 35.95l14.8 6.34c50.3 21.57 78.7 43.56 78.7 93 0 53.3-41.87 82.5-98.1 82.5-54.98 0-90.5-26.2-107.88-60.54zm-209.13 5.13c9.3 16.5 17.76 30.45 38.1 30.45 19.45 0 31.72-7.61 31.72-37.2v-201.3h59.2v202.1c0 61.3-35.94 89.2-88.4 89.2-47.4 0-74.85-24.53-88.81-54.075z" />
               </svg>
-              <span class="text-xs">JavaScript</span>
+              <span class="text-sm mt-1">JavaScript</span>
             </li>
             <li class="flex flex-col items-center justify-center">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 29.43 29.43" class="w-10 h-10">
@@ -85,11 +85,11 @@
                 <circle cx="14.71" cy="14.71" r="2.05" fill="#70cff0" />
                 <ellipse cx="14.71" cy="14.71" rx="11" ry="4.2" fill="none" stroke="#70cff0" />
                 <ellipse cx="200.5" cy="418.23" rx="4.2" ry="11" transform="translate(-368.04 -247.23) rotate(-30)"
-                fill="none" stroke="#70cff0" />
+                  fill="none" stroke="#70cff0" />
                 <ellipse cx="200.5" cy="418.23" rx="11" ry="4.2" transform="translate(-447.73 -20.76) rotate(-60)"
-                fill="none" stroke="#70cff0" />
+                  fill="none" stroke="#70cff0" />
               </svg>
-              <span class="text-xs">React</span>
+              <span class="text-sm mt-1">React</span>
             </li>
 
             <li class="flex flex-col items-center justify-center">
@@ -101,11 +101,11 @@
                   d="M261 500.999C99.5 506.132 51.5 621.499 40.5 683.999C54.8333 660.832 100 610 166.5 610C244 610 303 696.5 339 723.5C382.737 756.303 470.623 799.615 586 764.5C678 736.5 720.667 638.832 730 592.499C685.5 652.999 618 689.338 534.5 646.499C477 616.999 434 495.5 261 500.999Z"
                   fill="#38bdf8" />
               </svg>
-              <span class="text-xs">Tailwind</span>
+              <span class="text-sm mt-1">Tailwind</span>
             </li>
             <li class="flex flex-col items-center justify-center">
               <img src="./src/assets/icons/styled-components.png" alt="styled components logo" class="w-10 h-10">
-              <span class="text-xs text-center">Styled Components</span>
+              <span class="text-sm mt-1 text-center">Styled Components</span>
             </li>
             <li class="flex flex-col items-center justify-center">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 774 875.7" class="w-10 h-10">
@@ -115,21 +115,21 @@
                 <path fill="#1c78c0"
                   d="M373 649.3L185.4 546.1V341.8L373 450.1v199.2zm26.8 0l187.6-103.1V341.8L399.8 450.1v199.2zm-13.4-207zM198.1 318.2l188.3-103.5 188.3 103.5-188.3 108.7-188.3-108.7z" />
               </svg>
-              <span class="text-xs">Webpack</span>
+              <span class="text-sm mt-1">Webpack</span>
             </li>
           </ul>
         </section>
 
         <!-- BACKEND section -->
-        <section>
-          <h3>Backend</h3>
-          <ul class="grid grid-cols-3">
+        <section class="border p-4 m-4 text-center bg-white rounded">
+          <h3 class="text-lg font-semibold mb-4">Backend</h3>
+          <ul class="grid grid-cols-3 gap-2 gap-y-4">
             <li class="flex flex-col items-center justify-center">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-10 h-10">
                 <path fill="#689F63"
                   d="M224 508c-6.7 0-13.5-1.8-19.4-5.2l-61.7-36.5c-9.2-5.2-4.7-7-1.7-8 12.3-4.3 14.8-5.2 27.9-12.7 1.4-.8 3.2-.5 4.6.4l47.4 28.1c1.7 1 4.1 1 5.7 0l184.7-106.6c1.7-1 2.8-3 2.8-5V149.3c0-2.1-1.1-4-2.9-5.1L226.8 37.7c-1.7-1-4-1-5.7 0L36.6 144.3c-1.8 1-2.9 3-2.9 5.1v213.1c0 2 1.1 4 2.9 4.9l50.6 29.2c27.5 13.7 44.3-2.4 44.3-18.7V167.5c0-3 2.4-5.3 5.4-5.3h23.4c2.9 0 5.4 2.3 5.4 5.3V378c0 36.6-20 57.6-54.7 57.6-10.7 0-19.1 0-42.5-11.6l-48.4-27.9C8.1 389.2.7 376.3.7 362.4V149.3c0-13.8 7.4-26.8 19.4-33.7L204.6 9c11.7-6.6 27.2-6.6 38.8 0l184.7 106.7c12 6.9 19.4 19.8 19.4 33.7v213.1c0 13.8-7.4 26.7-19.4 33.7L243.4 502.8c-5.9 3.4-12.6 5.2-19.4 5.2zm149.1-210.1c0-39.9-27-50.5-83.7-58-57.4-7.6-63.2-11.5-63.2-24.9 0-11.1 4.9-25.9 47.4-25.9 37.9 0 51.9 8.2 57.7 33.8.5 2.4 2.7 4.2 5.2 4.2h24c1.5 0 2.9-.6 3.9-1.7s1.5-2.6 1.4-4.1c-3.7-44.1-33-64.6-92.2-64.6-52.7 0-84.1 22.2-84.1 59.5 0 40.4 31.3 51.6 81.8 56.6 60.5 5.9 65.2 14.8 65.2 26.7 0 20.6-16.6 29.4-55.5 29.4-48.9 0-59.6-12.3-63.2-36.6-.4-2.6-2.6-4.5-5.3-4.5h-23.9c-3 0-5.3 2.4-5.3 5.3 0 31.1 16.9 68.2 97.8 68.2 58.4-.1 92-23.2 92-63.4z" />
               </svg>
-              <span class="text-xs">NodeJS</span>
+              <span class="text-sm mt-1">NodeJS</span>
             </li>
             <li class="flex flex-col items-center justify-center">
               <svg viewBox="0 0 52 30" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-10 h-10">
@@ -137,7 +137,7 @@
                   d="M51.7026 29.1934C50.9501 29.478 50.1195 29.4774 49.3674 29.1917C48.6154 28.9059 47.9939 28.3548 47.6203 27.6424L40.188 17.3643L39.1109 15.9274L30.4873 27.6553C30.1361 28.3379 29.5484 28.8692 28.8339 29.1499C28.1195 29.4306 27.3272 29.4415 26.6053 29.1805L37.7171 14.2729L27.3808 0.806564C28.1241 0.538734 28.9369 0.535183 29.6824 0.79651C30.4279 1.05784 31.0606 1.56808 31.474 2.24131L39.1777 12.6465L46.9244 2.2844C47.2783 1.61396 47.8662 1.09693 48.5764 0.831615C49.2866 0.566296 50.0695 0.571181 50.7763 0.845341L46.765 6.16855L41.3319 13.241C41.181 13.3756 41.0603 13.5406 40.9776 13.7251C40.895 13.9096 40.8522 14.1095 40.8522 14.3117C40.8522 14.5139 40.895 14.7138 40.9776 14.8983C41.0603 15.0828 41.181 15.2478 41.3319 15.3824L51.6811 29.1956L51.7026 29.1934ZM0.00433439 14.0877L0.90913 9.61755C3.39516 0.77856 13.5289 -2.89879 20.5001 2.57307C24.5824 5.78078 25.6014 10.322 25.4011 15.4405H2.4042C2.03151 24.5811 8.62789 30.1004 17.0619 27.2804C18.4291 26.7883 19.6529 25.9647 20.6237 24.8834C21.5944 23.8021 22.2818 22.4969 22.6242 21.0847C23.0701 19.65 23.8048 19.4044 25.1533 19.818C24.9286 21.5681 24.3099 23.2445 23.3439 24.721C22.3778 26.1975 21.0895 27.4357 19.5759 28.3425C17.0757 29.7101 14.2071 30.2521 11.3802 29.8911C8.5534 29.5301 5.91307 28.2846 3.83679 26.3326C1.78383 24.0219 0.543067 21.103 0.303778 18.0214C0.303778 17.5151 0.131437 17.0412 0.0151058 16.5866C0.00461882 15.7544 -0.000407927 14.9221 2.58433e-05 14.0898L0.00433439 14.0877ZM2.4322 13.4715H23.2296C23.1003 6.845 18.9189 2.14437 13.3414 2.10128C7.13283 2.01511 2.69071 6.61233 2.41712 13.4414L2.4322 13.4715Z"
                   fill="#000000" />
               </svg>
-              <span class="text-xs">Express</span>
+              <span class="text-sm mt-1">Express</span>
             </li>
             <li class="flex flex-col items-center justify-center">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 67" fill="#fff" fill-rule="evenodd" stroke="#000"
@@ -154,7 +154,7 @@
                     fill="#c2bfbf" />
                 </g>
               </svg>
-              <span class="text-xs">MongoDB</span>
+              <span class="text-sm mt-1">MongoDB</span>
             </li>
             <li class="flex flex-col items-center justify-center">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192 192" class="w-10 h-10">
@@ -199,7 +199,7 @@
                     fill="url(#d)"></path>
                 </g>
               </svg>
-              <span class="text-xs">Firebase</span>
+              <span class="text-sm mt-1">Firebase</span>
             </li>
             <li class="flex flex-col items-center justify-center">
               <svg viewBox="0 0 256 255" version="1.1" xmlns="http://www.w3.org/2000/svg"
@@ -226,15 +226,14 @@
                 </g>
               </svg>
 
-              <span class="text-xs">Python</span>
+              <span class="text-sm mt-1">Python</span>
             </li>
           </ul>
         </section>
-
         <!-- MISCELLANEOUS section -->
-        <section>
-          <h3>Miscellaneous</h3>
-          <ul class="grid grid-cols-3">
+        <section class="border p-4 m-4 text-center bg-white rounded">
+          <h3 class="text-lg font-semibold mb-4">Miscellaneous</h3>
+          <ul class="grid grid-cols-3 gap-2">
             <li class="flex flex-col items-center justify-center">
               <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 97 97"
@@ -249,7 +248,7 @@
                     C95.021,50.468,95.021,46.719,92.71,44.408z" />
                 </g>
               </svg>
-              <span class="text-xs">Git</span>
+              <span class="text-sm mt-1">Git</span>
             </li>
             <li class="flex flex-col items-center justify-center">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 66" fill="#fff" fill-rule="evenodd" stroke="#000"
@@ -258,7 +257,7 @@
                   d="M56.453 31.518c0-3.854-2.65-7.097-6.207-8.023L58.214 0H18.717l7.986 23.57c-3.446 1-5.985 4.188-5.985 7.968 0 2.78 1.4 5.244 3.502 6.763-.85 1.199-1.819 2.31-2.89 3.317-2.057 1.927-4.336 3.4-6.8 4.4-2.224-1.5-3.187-4.15-2.316-6.522a8.29 8.29 0 0 0 5.855-7.93c0-4.577-3.724-8.283-8.283-8.283-4.577 0-8.3 3.724-8.3 8.3a8.24 8.24 0 0 0 2.409 5.818l-.4.797c-1.24 2.557-2.65 5.448-3.187 8.7-1.075 6.485.686 11.692 4.93 14.638 2.4 1.65 5.02 2.483 7.856 2.483 4.873 0 9.82-2.446 14.6-4.818 3.4-1.686 6.93-3.446 10.395-4.3 1.28-.315 2.613-.5 4.02-.704 2.854-.408 5.8-.834 8.45-2.372 3.094-1.797 5.207-4.8 5.818-8.246.463-2.65 0-5.318-1.186-7.653.797-1.28 1.24-2.78 1.24-4.4zm-3.613 0c0 2.576-2.094 4.67-4.67 4.67s-4.67-2.094-4.67-4.67a4.81 4.81 0 0 1 .6-2.316 5.05 5.05 0 0 1 .52-.74c.193-.227.411-.432.649-.611l.02-.02.482-.334s.02 0 .02-.02c.074-.037.148-.093.222-.13.02 0 .037-.02.056-.02.074-.037.167-.074.26-.1.088-.033.175-.07.26-.11.02 0 .037-.02.056-.02.074-.02.148-.056.222-.074.02 0 .056-.02.074-.02l.26-.056h.02l.278-.056c.02 0 .056 0 .074-.02.074 0 .148-.02.222-.02h.093c.093 0 .185-.02.296-.02h.24a.76.76 0 0 1 .204.019h.037c.148.02.296.037.445.074a4.71 4.71 0 0 1 3.724 4.595zM23.897 3.706h29.147l-6.7 19.734c-.278.056-.556.148-.834.24L38.47 9.32l-7.06 14.268c-.278-.093-.574-.148-.87-.204zm13.248 26.2a8.22 8.22 0 0 0-2.5-4.447l3.836-7.745 3.873 7.912a8.37 8.37 0 0 0-2.316 4.28zm-9.283-2.928l.26-.056h.056c.074-.02.148-.02.222-.037h.074c.074 0 .13-.02.204-.02h.723c.074 0 .13.02.185.02.037 0 .056 0 .093.02.074.02.13.02.204.037.02 0 .037 0 .074.02l.26.056c.093.02.167.037.24.074.02 0 .037.02.074.02.056.02.13.037.185.074.02 0 .037.02.056.02.074.037.148.056.222.093h.02a1 1 0 0 1 .241.13c.093.037.167.093.24.13.02 0 .02.02.037.02.074.037.13.093.204.13l.02.02c.222.167.426.352.63.537l.02.02c.185.204.37.426.52.667a4.66 4.66 0 0 1 .76 2.557c0 2.576-2.094 4.67-4.67 4.67s-4.67-2.094-4.67-4.67c-.02-2.168 1.482-4.002 3.52-4.52zm-18.233-.13c2.576 0 4.67 2.094 4.67 4.67s-2.094 4.67-4.67 4.67-4.67-2.094-4.67-4.67 2.094-4.67 4.67-4.67zm43.1 16.065c-.408 2.372-1.87 4.447-4.02 5.688-2.02 1.167-4.503 1.538-7.115 1.9-1.427.204-2.928.426-4.373.778-3.854.945-7.56 2.798-11.155 4.577-4.595 2.28-8.93 4.428-12.952 4.428-2.094 0-3.965-.593-5.744-1.834-4.076-2.816-3.873-8.097-3.4-10.988.445-2.705 1.686-5.244 2.872-7.67.074-.148.13-.278.204-.426.415.15.844.262 1.28.334-.704 3.928 1.297 7.986 5.188 9.987l.704.37.76-.278c3.243-1.15 6.244-3.02 8.894-5.522 1.464-1.365 2.758-2.902 3.854-4.577.426.074.852.093 1.28.093 3.854 0 7.097-2.65 8.023-6.207h3.113c.926 3.576 4.17 6.207 8.023 6.207a8.2 8.2 0 0 0 4.188-1.149c.482 1.4.63 2.835.37 4.28z"
                   stroke="none" fill="#99424f" fill-rule="nonzero" />
               </svg>
-              <span class="text-xs">Jest</span>
+              <span class="text-sm mt-1">Jest</span>
             </li>
             <li class="flex flex-col items-center justify-center">
               <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
@@ -269,12 +268,13 @@
                     d="M440.4,0H71.7C46.3,0,25.6,20.6,25.6,46.1v419.8c0,25.5,20.7,46.1,46.1,46.1h368.7c25.4,0,46.1-20.6,46.1-46.1 V46.1C486.4,20.6,465.8,0,440.4,0z M460.8,465.9c0,11.3-9.2,20.5-20.5,20.5H71.7c-11.3,0-20.5-9.2-20.5-20.5V46.1	c0-11.3,9.2-20.5,20.5-20.5h368.7c11.3,0,20.5,9.2,20.5,20.5V465.9z M140.8,435.2l57.6-51.2l-57.6-51.2V435.2z M348.9,227.7	c-10.4-10.4-29.3-22.9-60.9-22.9c-34.7,0-70.5,9-96,17.3V76.8h-51.2v222l36.2-16.4c0.6-0.3,58.9-26.4,111-26.4 c26,0,31.7,14.3,32,26.3v152.9h51.2V281.6C371.3,278.3,370.9,249.9,348.9,227.7 M281.6,160h51.2c23.1-26.2,34.9-54.1,38.4-83.2	h-51.2C314.3,105.8,301.7,133.6,281.6,160" />
                 </g>
               </svg>
-              <span class="text-xs">Heroku</span>
+              <span class="text-sm mt-1">Heroku</span>
             </li>
           </ul>
         </section>
 
       </section>
+
 
       <!-- PROJECTS section -->
       <section id="projects">
